# monorepo

./: .envrc  .gitignore  Makefile  QUICKSTART.md  README.md  flake.nix  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
services/python/api-service/: README.md  pyproject.toml
services/python/api-service/api_service/: __init__.py  main.py
services/python/api-service/tests/: test_main.py
