[project]
name = "api-service"
version = "0.1.0"
description = "Example API service"
requires-python = ">=3.11"
dependencies = [
    "shared-utils",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
shared-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
